saves/test/demo_full_20240802_193545/7420/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp 7420_tb.v 7420.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
7420_tb.v:94: $finish called at 380000 (1ps)

iverilog cmd 2 error:

